fixed files in folder patches and updated them to version 8.3.x . Updated Config.in all other configuration files as best as I can.

--- a/make/pkgs/php/external.in
+++ b/make/pkgs/php/external.in
@@ -28,7 +28,7 @@ config EXTERNAL_FREETZ_PACKAGE_PHP_apxs2
 	default n
 	help
 		externals the following file(s):
-		 /usr/lib/apache2/libphp5.so
+		 /usr/lib/apache2/libphp.so
 
 endmenu
 
